<resources>
    <string name="app_name">Infinite Scroll</string>

    <!-- menu -->
    <string name="menu_personal_name">Fabián Rosales Esquivel</string>
    <string name="menu_developer_name">Frosquivel Developer</string>
    <string name="menu_profession">Analyst and Software Developer</string>
    <string name="menu_infinite_scroll">Infinite Scroll</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_country_api">Country API</string>
    <string name="menu_title_communicate_with_us">Communicate with Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_help_us">Buy me a coffee</string>
    <string name="menu_contact_us">We offer</string>
    <string name="menu_title_footer">Footer</string>
    <string name="menu_about">About</string>
    <string name="menu_license">License</string>
    <string name="menu_awareness">Awareness</string>
    <string name="menu_personal_value">https://github.com/fabian7593</string>
    <string name="menu_infinite_scroll_value">https://fabian7593.github.io/InifiniteScroll/</string>
    <string name="menu_county_api_value">https://fabian7593.github.io/CountryAPI/</string>
    <string name="menu_license_value">https://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="menu_git_creator">https://github.com/fabian7593</string>

    <!-- Email -->
    <string name="email_subject">Infinite Scroll Android Library 0.0.1</string>
    <string name="email_choose">Choose Email Client</string>
    <string name="email_title">Share Infinite Scroll</string>
    <string name="email_text">Hello We are the developers of Infinite Scroll library, \n\n we want to share with you this library, Infinite Scroll, for call your when the list view require this. \n\n View this library here. \n XXXX1 \n\n And download the app here: \n XXXX2, \n\n And if you have the possibility to buy the Payment app, we will be very grateful, you can see here: \n XXXX3</string>
    <string name="link_git">https://github.com/fabian7593/InifiniteScroll</string>
    <string name="link_play_store">https://play.google.com/store/apps/details?id=frosquivel.com.infinitescrollapp</string>
    <string name="link_play_store_payment">https://play.google.com/store/apps/details?id=frosquivel.com.infinitescrollpayapp</string>

    <!-- shared preferences default-->
    <string name="shared_preference_minimun_number_row_loading">8</string>
    <string name="shared_preference_current_page">1</string>
    <string name="shared_preference_max_limit">25</string>
    <string name="shared_preference_area_from">0</string>
    <string name="shared_preference_area_to">18000000</string>
    <string name="shared_preference_region">All</string>
    <string name="shared_preference_sub_region">All</string>

    <string name="shared_preference_request_options_title">Request Options</string>
    <string name="shared_preference_minimun_number_row_loading_label">Minimum row number</string>
    <string name="shared_preference_current_page_label">Start Current Page</string>
    <string name="shared_preference_max_limit_label">Max Limit Object Response</string>

    <string name="shared_preference_regions_filter_title">Regions Filter</string>
    <string name="shared_preference_list_region_label">List of Regions</string>
    <string name="shared_preference_region_label">Region</string>
    <string name="shared_preference_sub_region_label">Sub Region</string>

    <string name="shared_preference_individual_filter_title">Individual Filter</string>
    <string name="shared_preference_country_name">Country Name</string>
    <string name="shared_preference_alpha_code_2_label">Alpha Code 2</string>
    <string name="shared_preference_alpha_code_3_label">Alpha Code 3</string>
    <string name="shared_preference_native_language_label">Currency Name</string>

    <string name="shared_preference_size_area_title">Size Area</string>
    <string name="shared_preference_min_area_label">Min Area</string>
    <string name="shared_preference_max_area_label">Max Area</string>

    <!-- countryDetail -->
    <string name="country_detail_name">Name</string>
    <string name="country_detail_native_name">Native Name</string>
    <string name="country_detail_region">Region</string>
    <string name="country_detail_sub_region">Sub Region</string>
    <string name="country_detail_alpha_code_2">Alpha Code 2</string>
    <string name="country_detail_alpha_code_3">Alpha Code 3</string>
    <string name="country_detail_native_language">Native language</string>
    <string name="country_detail_numeric_code">Numeric Code</string>
    <string name="country_detail_area">Area</string>
    <string name="country_detail_currency_name">Currency Name</string>
    <string name="country_detail_currency_code">Currency Code</string>
    <string name="country_detail_currency_symbol">Currency Symbol</string>

    <!-- onBoarding -->
    <string name="on_boarding_android_title">Android Development</string>
    <string name="on_boarding_ios_title">iOS Development</string>
    <string name="on_boarding_web_title">Web development</string>
    <string name="on_boarding_analytics_title">Analytics / graphics</string>
    <string name="on_boarding_qa_title">QA</string>
    <string name="on_boarding_cloud_title">Cloud Computing</string>
    <string name="on_boarding_android_value">App creation with Android for with Java, Android Studio, with high quality.</string>
    <string name="on_boarding_ios_value">App creation with iOS, with Objetive C, XCode, with high quality and performance.</string>
    <string name="on_boarding_web_value">Web creation with .Net, and PHP. Too any scripts and frameworks front end.</string>
    <string name="on_boarding_analytics_value">Perform BI and data analytics, and make Graphics with this information.</string>
    <string name="on_boarding_qa_value">Perform an Quality Assurance for the software that you need.</string>
    <string name="on_boarding_cloud_value">Connect your apps with cloud computing services like AWS, GCP and Azure.</string>

    <!-- awareness message -->
    <string name="splash_border_text">No borders</string>
    <string name="splash_father_we_are">We are all ?</string>
    <string name="splash_child_human">humans</string>
    <string name="splash_child_brothers">brothers</string>

    <!-- navigators -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="action_settings">Settings</string>

    <!-- Schemes -->
    <string name="scheme_scheme_youtube">youtube://channel/</string>
    <string name="scheme_id_youtube">UCJnvvHb_vwMwbnZWplkHIfw</string>
    <string name="scheme_url_youtube">https://www.youtube.com/channel/UCJnvvHb_vwMwbnZWplkHIfw</string>
    <string name="scheme_scheme_linkedin">linkedin://</string>
    <string name="scheme_id_linkedin">fabian-rosales-esquivel-698893106</string>
    <string name="scheme_url_linkedin">https://www.linkedin.com/in/fabian-rosales-esquivel-698893106/</string>
    <string name="scheme_scheme_messenger">fb-messenger://user/</string>
    <string name="scheme_id_messenger">100003819211529</string>
    <string name="scheme_url_messenger">https://www.messenger.com/t/fabian.rosales.509</string>

    <!-- About -->
    <string name="about_name">Fabián Rosales Esquivel</string>
    <string name="about_sub_title">Analyst and Software Developer</string>
    <string name="about_brief">I\'m apassionate with all mobile devices technologies in focus of Android and iOS native. \n\n Ideas maker, autodidact, UI/UX best practices, design patterns and others. \n\n I like too develop Web, Frontend and Backend, some of design and photography too.</string>
    <string name="about_playstore">Frosquivel%20Developer&amp;</string>
    <string name="about_gitlink">fabian7593</string>
    <string name="about_email">fabian7593@gmail.com</string>
    <string name="about_skype">fabianre7593</string>
    <string name="about_youtube">UCJnvvHb_vwMwbnZWplkHIfw</string>

    <!-- Awareness -->
    <string name="awareness_01">Without Borders</string>
    <string name="awareness_02">We are humans</string>
    <string name="awareness_03">We are brothers</string>
    <string name="awareness_04">We smile and cry</string>
    <string name="awareness_05">By a flag, I will not kill</string>
    <string name="awareness_06">Stop Xenofobia</string>
    <string name="awareness_07">Stop Homofobia</string>
    <string name="awareness_08">Stop Racism</string>
    <string name="awareness_09">Stop Bullying</string>
    <string name="awareness_10">Stop Hate!</string>
    <string name="awareness_11">Please become aware...</string>

    <!-- General -->
    <string name="general_accept">Ok</string>
    <string name="general_cancel">Cancel</string>

    <!-- Errors -->
    <string name="error_title">Error!</string>
    <string name="error_not_have_networking">Please review your internet connection.</string>
    <string name="error_not_open_messenger">You cannot open Facebook Messenger</string>
    <string name="error_not_open_linkedin">You cannot open LinkedIn</string>
    <string name="error_not_open_youtube">You cannot open YouTube</string>


    <!-- Array Options -->
    <string-array name="continents">
        <item>All</item>
        <item>Africa</item>
        <item>Americas</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>Oceania</item>
        <item>Polar</item>
    </string-array>

    <string-array name="africa_list">
        <item>Eastern Africa</item>
        <item>Middle Africa</item>
        <item>Northern Africa</item>
        <item>Southern Africa</item>
        <item>Western Africa</item>
    </string-array>

    <string-array name="americas_list">
        <item>Caribbean</item>
        <item>Central America</item>
        <item>Northern America</item>
        <item>South America</item>
    </string-array>

    <string-array name="asia_list">
        <item>Central Asia</item>
        <item>Eastern Asia</item>
        <item>South-Eastern Asia</item>
        <item>Southern Asia</item>
        <item>Western Asia</item>
    </string-array>

    <string-array name="europe_list">
        <item>Eastern Europe</item>
        <item>Northern Europe</item>
        <item>Southern Europe</item>
        <item>Western Europe</item>
    </string-array>

    <string-array name="oceania_list">
        <item>Australia and New Zealand</item>
        <item>Melanesia</item>
        <item>Micronesia</item>
        <item>Polynesia</item>
    </string-array>
</resources>
