<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_infinite_scroll"
            android:icon="@drawable/ic_icon_infinite"
            android:title="@string/menu_infinite_scroll" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_country_api"
            android:icon="@drawable/ic_api"
            android:title="@string/menu_country_api" />
    </group>

    <item android:title="@string/menu_title_communicate_with_us">
    <menu>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_help_us"
            android:icon="@drawable/ic_help_us"
            android:title="@string/menu_help_us" />

        <item
            android:id="@+id/nav_on_boarding"
            android:icon="@drawable/ic_offer"
            android:title="@string/menu_contact_us" />

    </menu>
</item>


    <item android:title="@string/menu_title_footer">
        <menu>
            <item
                android:id="@+id/nav_license"
                android:icon="@drawable/ic_license"
                android:title="@string/menu_license" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/nav_awareness"
                android:icon="@drawable/ic_awareness"
                android:title="@string/menu_awareness" />
        </menu>
    </item>

</menu>
